fixed overflow on the hero section animation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -338,6 +338,7 @@ a {
     padding: var(--100) 0;
     text-align: center;
     clip-path: ellipse(83% 100% at 55.85% 0%);
+    overflow: hidden;
 }
 
 .shimmer {
